--- a/App2/App2.csproj
+++ b/App2/App2.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
+        <PackageReference Include="Microsoft.AspNetCore.All" />
     </ItemGroup>
 
     <ItemGroup>
